    (ddas)

    HADOOP-5392. Fixes a problem to do with JT crashing during recovery when
    the job files are garbled. (Amar Kamat vi ddas)

    HADOOP-5307. Fix null value handling in StringUtils#arrayToString() and 
    #getStrings(). (enis)
 
    HADOOP-5421. Removes the test TestRecoveryManager.java from the 0.19 branch
    as it has compilation issues. (ddas) 

Release 0.19.1 - 2009-02-23

  INCOMPATIBLE CHANGES

    HADOOP-5225. Workaround for tmp file handling in HDFS. sync() is 
    incomplete as a result. committed only to 0.19.x. (Raghu Angadi)

    HADOOP-5224. HDFS append() is disabled. It throws 
    UnsupportedOperationException. committed only to 0.19.x (Raghu Angadi) 

  IMPROVEMENTS

    HADOOP-4739. Fix spelling and grammar, improve phrasing of some sections in
    mapred tutorial. (Vivek Ratan via cdouglas)

    HADOOP-3894. DFSClient logging improvements. (Steve Loughran via shv)

    HADOOP-5126. Remove empty file BlocksWithLocations.java (shv)

    HADOOP-5127. Remove public methods in FSDirectory. (Jakob Homan via shv)

  BUG FIXES

    HADOOP-4697. Fix getBlockLocations in KosmosFileSystem to handle multiple
    blocks correctly. (Sriram Rao via cdouglas)

    HADOOP-4420. Add null checks for job, caused by invalid job IDs.
    (Aaron Kimball via tomwhite)

    HADOOP-4632. Fix TestJobHistoryVersion to use test.build.dir instead of the
    current workding directory for scratch space. (Amar Kamat via cdouglas)

    HADOOP-4508. Fix FSDataOutputStream.getPos() for append. (dhruba via
    szetszwo)

    HADOOP-4727. Fix a group checking bug in fill_stat_structure(...) in
    fuse-dfs.  (Brian Bockelman via szetszwo)

    HADOOP-4731. Fix capacity scheduler to correctly remove job on completion 
    from waiting queue. (Amar Kamat via yhemanth)

    HADOOP-4836. Correct typos in mapred related documentation.  (Jord? Polo
    via szetszwo)

    HADOOP-4821. Usage description in the Quotas guide documentations are