@@ -123,13 +123,13 @@ public class TestFileAppend2 extends TestCase {
    * Verify that all data exists in file.
    */ 
   public void testSimpleAppend() throws IOException {
-    /* HDFS append() is temporarily disabled in 0.19 */
-    if (true) return;
     Configuration conf = new Configuration();
     if (simulatedStorage) {
       conf.setBoolean(SimulatedFSDataset.CONFIG_PROPERTY_SIMULATED, true);
     }
     conf.setInt("dfs.datanode.handler.count", 50);
+    conf.setInt("dfs.datanode.handler.count", 50);
+    conf.setBoolean("dfs.support.append", true);
     initBuffer(fileSize);
     MiniDFSCluster cluster = new MiniDFSCluster(conf, 1, true, null);
     FileSystem fs = cluster.getFileSystem();
@@ -371,8 +371,6 @@ public class TestFileAppend2 extends TestCase {
    * Test that appends to files at random offsets.
    */
   public void testComplexAppend() throws IOException {
-    /* HDFS append() is temporarily disabled in 0.19 */
-    if (true) return;
     initBuffer(fileSize);
     Configuration conf = new Configuration();
     conf.setInt("heartbeat.recheck.interval", 2000);
@@ -381,6 +379,7 @@ public class TestFileAppend2 extends TestCase {
     conf.setInt("dfs.socket.timeout", 30000);
     conf.setInt("dfs.datanode.socket.write.timeout", 30000);
     conf.setInt("dfs.datanode.handler.count", 50);
+    conf.setBoolean("dfs.support.append", true);
 
     MiniDFSCluster cluster = new MiniDFSCluster(conf, numDatanodes, 
                                                 true, null);
